# roadmap-cli

./: CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  install.sh
.github/workflows/: ci.yml  release.yml
.phases/: config.yml  phase-1.yml  phase-2.yml  phase-3.yml  phase-4.yml  phase-5.yml  phase-6.yml
docs/: commands.md  data-format.md  examples.md  getting-started.md
homebrew/: roadmap-cli.rb
src/: cli.rs  config.rs  main.rs  phase.rs  tui.rs  update.rs  utils.rs
src/commands/: changelog.rs  list.rs  sync.rs  task.rs  workflow.rs
