[package]
name = "roadmap-cli"
version = "0.3.3"
edition = "2024"
repository = "https://github.com/Siovos/roadmap-cli"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tabled = "0.20.0"

# Web dependencies
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
askama = "0.13"
rust-embed = { version = "8.6", features = ["axum"] }
open = "5.3"
mime_guess = "2.0"

# Update dependencies
reqwest = { version = "0.12", features = ["json", "blocking"] }
flate2 = "1.1"
tar = "0.4"
semver = "1.0"
tempfile = "3.19"

# Scan dependencies
glob = "0.3"
regex = "1.11"

# Man page generation
clap_mangen = "0.2"
clap_complete = "4.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
dotenvy = "0.15.7"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.10.1"
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"] }
sea-orm-migration = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
